--- a/style.css
+++ b/style.css
@@ -1,12 +1,53 @@
 
-body{font-family: 'Open Sans', sans-serif;}
+body{margin:0 auto;
+    }
+h1,h2,h3{font-family: 'Viaoda Libre', cursive;}  
+section{height: 500px;padding-bottom: 150px;}  
 h1{font-size: 25px;}
-.name-highlight{color: orange;font-size: 40px;}
-.name-highlight:hover{color:greenyellow;font-size: 45px;}
-.half-width{width: 40%;margin-left: 5%;float: left;text-align: left;padding-left: 2%;}
-.half-width img{width: 100%;margin-top: -40px;}
-.half-width a{font-size: 15px;background-color: rgba(243, 176, 87, 0.925);border: 1px solid brown;
-padding: 5px 18px;border-radius: 4px;color: #ddd;text-decoration: none;
+
+p{color: dimgray;}
+.orange-highlight{color: orange;font-size: 30px;}
+.orange-highlight:hover{color:greenyellow;font-size: 35px;}
+.half-width{width: 40%;margin-left: 5%;float: left;text-align: left;padding-left: 2%;
 
 }
-.half-width a:hover{color:red;}
+.half-width img{width: 100%;}
+.link:hover{color:red;border: 3px solid rgb(206, 80, 7)}
+.top-banner{
+    background-image: url("images/top-banner.png");
+    
+    background-repeat: no-repeat;
+    margin-bottom: 100px;
+    padding-top: 50px;
+}
+.link{font-size: 15px;border: 1px solid rgb(126, 7, 206);
+    padding: 5px 18px;border-radius: 4px;color: #ddd;text-decoration: none;
+    background-image: linear-gradient(45deg, rgb(122, 255, 155), rgb(6, 94, 35));
+    font-weight: 700;color: white;
+    }
+    
+    p{font-size: 22px;}
+    .biography-section{ background-image: url("images/dream-bg.png");
+        background-repeat: no-repeat;
+        background-position: right;
+       
+    }
+    .experience-section{background-image: url(images/exp-bg.png);
+        background-repeat: no-repeat;
+        background-position: left;
+    
+    }
+    .single-experience{
+        box-shadow:10px 10px 45px gray;
+        height: 80%;
+        border-radius: 10px;
+        background-color: #fff;
+    }
+    #stack-1{border-left: 6px solid;
+        border-image: linear-gradient(180deg, red, green);
+        border-image-slice: 1;}
+    #stack-2{border-left: 6px solid;
+        border-image: linear-gradient(180deg, blue, cyan);
+        border-image-slice: 1;
+    }
+    footer p{text-align: center;}
